--- a/twocolumn2.html
+++ b/twocolumn2.html
@@ -51,12 +51,15 @@
 								<!-- Sidebar -->
 									<section>
 										<header>
-											<h2>Magna Phasellus</h2>
+											<h2>Projects</h2>
 										</header>
 										<ul class="link-list">
 											<li><a href="#project3">Lunar Lander Door Mechanism</a></li>
 											<li><a href="#project2">Control System for Linkage</a></li>
 											<li><a href="#project1">Robotic Machine Player (RMP)</a></li>
+											<li><a href = "#project0">Optimization</a></li>
+											<li><a href = "#project00">Mock Evaluation of R-134a Food Storage Unit</a></li>
+
 										</ul>
 									</section>
 
@@ -149,6 +152,33 @@
 											<source src="250v.mp4" type="video/mp4">
 											Your browser does not support the video tag.
 										  </video>
+										  <header id="project0">
+											<h2>Optimization</h2>
+											<h3>Matlab Implementation</h3>
+										</header>
+										<p>
+											Used various optimization methods such as BFGS, Newton's Method,conjugate gradient and 
+											classic gradient descent with aerospace applications such as descent guidance, Clohessy Wiltshire
+											equations and more. 
+										</p>
+										<p>
+											Additionally, I used several machine learning toolboxes in MATLAB such as K-Nearest Neighborhood
+											to examine temperature and O2 storage OBD data.
+										</p>
+										<header id="project00">
+											<h2>Mock Evaluation of R-134a Food Storage Unit</h2>
+											<h3>Data Analysis</h3>
+										</header>
+										<p>
+											This project involved a refrigeration training unit. Our team examined the effectiveness of the 
+											refrigeration cycle using attached sensors and data. We worked with various pressure, flow, temperature
+											sensors and wrote a technical document that describes our findings and errors associated with our 
+											measurements.
+										</p>
+										<iframe src="2024.10.30 Team3B Lab5.pdf" width="80%" height="600px" style="border: none;">
+											This browser does not support PDFs. Please download the PDF to view it: 
+											<a href="2024.10.30 Team3B Lab5.pdf">Download PDF</a>.
+										</iframe>
 									</section>
 
 							</div>
