--- a/twocolumn1.html
+++ b/twocolumn1.html
@@ -46,7 +46,7 @@
 
 							<!-- Main Content -->
 							<section>
-								<h2>Mechanical Engineering Intern – U of M Architecture, Engineering and Construction</h2>
+								<h2>Plant Engineering Intern – U of M Architecture, Engineering and Construction</h2>
 								<h3>Scope</h3>
 								<p>Worked alongside design, operations and maintenance and construction engineers as well as 
 									architects over the 2024 summer and for the 2024 fall semester. I also had the opportunity to communicate within
